--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.40-bin.jar=C:\\Users\\Duygu Citak\\Desktop\\DB\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
 file.reference.mysql-connector-java-5.1.40-bin.jar-1=C:\\Users\\User\\Desktop\\DB\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
+file.reference.mysql-connector-java-5.1.40-bin.jar-2=C:\\Users\\samet\\Desktop\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.40-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.40-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
