--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
 compile.on.save=true
 file.reference.mysql-connector-java-5.1.40-bin.jar=C:\\Users\\User\\Desktop\\DB\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
-user.properties.file=C:\\Users\\samet\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+file.reference.mysql-connector-java-5.1.40-bin.jar-2=C:\\Users\\User\\Desktop\\DB\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
+user.properties.file=C:\\Users\\User\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
