--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,11 @@ dist.jar=${dist.dir}/Auftragsverwaltungssystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.junit-4.12.jar=C:\\Users\\samet\\Downloads\\SSD Daten\\Neuer Ordner\\junit-4.12.jar
-file.reference.mysql-connector-java-5.1.40-bin.jar=C:\\Users\\samet\\Desktop\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
+file.reference.mysql-connector-java-5.1.40-bin.jar-3=C:\\Users\\samet\\Desktop\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.40-bin.jar}:\
-    ${file.reference.junit-4.12.jar}
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
