--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,6 @@ dist.jar=${dist.dir}/Auftragsverwaltungssystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.40-bin.jar-3=C:\\Users\\samet\\Desktop\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -113,9 +112,7 @@ endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.40-bin.jar-3}:\
-    ${libs.junit_4.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
