Testklassen hinzugefügt. Änderungen in anderen Klassen.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,8 @@ dist.jar=${dist.dir}/Auftragsverwaltungssystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.junit-4.12.jar-1=C:\\Users\\samet\\Downloads\\SSD Daten\\Neuer Ordner\\junit-4.12.jar
+file.reference.mysql-connector-java-5.1.40-bin.jar-3=C:\\Users\\samet\\Desktop\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -112,7 +114,9 @@ endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar-3}:\
+    ${file.reference.junit-4.12.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
