--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -121,7 +121,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     <<<<<<< HEAD:\
-    ${file.reference.junit-4.12.jar-2}
+    ${file.reference.junit-4.12.jar-2}:\
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar-2}
     ${file.reference.mysql-connector-java-5.1.40-bin.jar-2}
 =======
     ${file.reference.mysql-connector-java-5.1.40-bin.jar-3}:\
