Auftrag bearbeiten Test

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -119,7 +119,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-<<<<<<< HEAD
+    ${file.reference.junit-4.12.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar-3}
     ${file.reference.mysql-connector-java-5.1.40-bin.jar-3}:\
     ${file.reference.junit-4.12.jar-1}
 =======
